Koala Framework Doku auf neue Form gebracht

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,43 +5,43 @@ pages:
 - Documentation: 'index.md'
 - Kwf(General Features):
     - Config:
-        - 'Overview': 'kwf-general-features/config.md'
-        - 'Https': 'kwf-general-features/config/https.md'
-        - 'PreLogin': 'kwf-general-features/config/prelogin.md'
+                - 'Overview': 'kwf-general-features/config.md'
+                - 'Https': 'kwf-general-features/config/https.md'
+                - 'PreLogin': 'kwf-general-features/config/prelogin.md'
     - Models:
-        - 'Overview': 'kwf-general-features/models.md'
-        - 'Setup Database': 'kwf-general-features/models/setup-database.md'
-        - 'Basic Usage': 'kwf-general-features/models/basic-usage.md'
-        - 'Relations': 'kwf-general-features/models/relations.md'
-        - 'Select (query)': 'kwf-general-features/models/select-query.md'
-        - 'Expressions': 'kwf-general-features/models/expressions.md'
-        - 'Stored Expressions': 'kwf-general-features/models/stored-expressions.md'
-        - 'Filters': 'kwf-general-features/models/filters.md'
-        - 'Modify Row Behavior': 'kwf-general-features/models/modify-row-behavior.md'
-        - 'Row __toString': 'kwf-general-features/models/row-tostring.md'
-        - 'Export / Import': 'kwf-general-features/models/export-import.md'
-        - 'Deleted Flag': 'kwf-general-features/models/deleted-flag.md'
-        - 'Mappings': 'kwf-general-features/models/mappings.md'
-        - 'Iterators': 'kwf-general-features/models/iterators.md'
-        - 'Updates/Structure Changes': 'kwf-general-features/models/update-structure-changes.md'
+                - 'Overview': 'kwf-general-features/models.md'
+                - 'Setup Database': 'kwf-general-features/models/setup-database.md'
+                - 'Basic Usage': 'kwf-general-features/models/basic-usage.md'
+                - 'Relations': 'kwf-general-features/models/relations.md'
+                - 'Select (query)': 'kwf-general-features/models/select-query.md'
+                - 'Expressions': 'kwf-general-features/models/expressions.md'
+                - 'Stored Expressions': 'kwf-general-features/models/stored-expressions.md'
+                - 'Filters': 'kwf-general-features/models/filters.md'
+                - 'Modify Row Behavior': 'kwf-general-features/models/modify-row-behavior.md'
+                - 'Row __toString': 'kwf-general-features/models/row-tostring.md'
+                - 'Export / Import': 'kwf-general-features/models/export-import.md'
+                - 'Deleted Flag': 'kwf-general-features/models/deleted-flag.md'
+                - 'Mappings': 'kwf-general-features/models/mappings.md'
+                - 'Iterators': 'kwf-general-features/models/iterators.md'
+                - 'Updates/Structure Changes': 'kwf-general-features/models/update-structure-changes.md'
     - Controllers:
-        - 'Overview': 'kwf-general-features/controllers.md'
-        - 'Quick Start': 'kwf-general-features/controllers/quick-start.md'
-        - 'Cli Controllers': 'kwf-general-features/controllers/cli-controllers.md'
+                - 'Overview': 'kwf-general-features/controllers.md'
+                - 'Quick Start': 'kwf-general-features/controllers/quick-start.md'
+                - 'Cli Controllers': 'kwf-general-features/controllers/cli-controllers.md'
     - Users:
-            - 'Overview': 'kwf-general-features/users.md'
-            - 'User Model': 'kwf-general-features/users/user-model.md'
-            - 'Config': 'kwf-general-features/users/config.md'
-            - 'User Management': 'kwf-general-features/users/user-management.md'
-            - 'Auth Methods': 'kwf-general-features/users/auth-methods.md'
-            - 'Auth: Google OAuth Login': 'kwf-general-features/users/auth-google-login.md'
+                - 'Overview': 'kwf-general-features/users.md'
+                - 'User Model': 'kwf-general-features/users/user-model.md'
+                - 'Config': 'kwf-general-features/users/config.md'
+                - 'User Management': 'kwf-general-features/users/user-management.md'
+                - 'Auth Methods': 'kwf-general-features/users/auth-methods.md'
+                - 'Auth: Google OAuth Login': 'kwf-general-features/users/auth-google-login.md'
     - Acl:
-            - 'Overview': 'kwf-general-features/acl.md'
-            - 'Quick Start': 'kwf-general-features/acl/quick-start.md'
-            - 'Usage in Controllers': 'kwf-general-features/acl/usage-in-controllers.md'
-            - 'Backend Menu': 'kwf-general-features/acl/backend-menu.md'
-            - 'Backend Login Appearance': 'kwf-general-features/acl/backend-login-appearance.md'
-            - 'Backend Menu Order': 'kwf-general-features/acl/backend-menu-order.md'
+                - 'Overview': 'kwf-general-features/acl.md'
+                - 'Quick Start': 'kwf-general-features/acl/quick-start.md'
+                - 'Usage in Controllers': 'kwf-general-features/acl/usage-in-controllers.md'
+                - 'Backend Menu': 'kwf-general-features/acl/backend-menu.md'
+                - 'Backend Login Appearance': 'kwf-general-features/acl/backend-login-appearance.md'
+                - 'Backend Menu Order': 'kwf-general-features/acl/backend-menu-order.md'
     - ExtJS Integration:
                 - 'Overview': 'kwf-general-features/extjs-integration.md'
                 - 'Quick Start': 'kwf-general-features/extjs-integration/quick-start.md'
@@ -126,7 +126,38 @@ pages:
                 - 'Navigation': 'kwc-cms/component-tree/navigation.md'
                 - 'Component Ids': 'kwc-cms/component-tree/component-ids.md'
                 - 'Custom Table Generator': 'kwc-cms/component-tree/custom-table-generator.md'
+    - Standard Components:
+                - 'Overview': 'kwc-cms/standard-components.md'
+                - 'Composite': 'kwc-cms/standard-components/composite.md'
+                - 'List': 'kwc-cms/standard-components/list.md'
+                - 'Paragraphs': 'kwc-cms/standard-components/paragraphs.md'
+                - 'TextImage': 'kwc-cms/standard-components/text-image.md'
+                - 'LinkTag': 'kwc-cms/standard-components/link-tag.md'
+                - 'Link': 'kwc-cms/standard-components/link.md'
+                - 'ImageEnlarge': 'kwc-cms/standard-components/image-enlarge.md'
+                - 'Html': 'kwc-cms/standard-components/html.md'
+                - 'Space': 'kwc-cms/standard-components/space.md'
 
+    - Customize Components:
+                - 'Overview': 'kwc-cms/customize-components.md'
+                - 'Inherit Component': 'kwc-cms/customize-components/inherit-component.md'
+                - 'Component Settings': 'kwc-cms/customize-components/component-settings.md'
+                - 'Component Name': 'kwc-cms/customize-components/component-name.md'
+                - 'Child Components': 'kwc-cms/customize-components/child-components.md'
+                - 'Styling - Css': 'kwc-cms/customize-components/styling-css.md'
+                - 'Content - Template': 'kwc-cms/customize-components/content-template.md'
+                - 'View Helpers': 'kwc-cms/customize-components/view-helpers.md'
+                - 'Behavior - Php': 'kwc-cms/customize-components/behavior-php.md'
+                - 'Behavior - JavaScript': 'kwc-cms/customize-components/behavior-javascript.md'
+                - 'Behavior - JavaScript + Ajax': 'kwc-cms/customize-components/behavior-javascript-ajax.md'
+                - 'Advanced: Backend Menu Item': 'kwc-cms/customize-components/advanced-backend-menu-item.md'
+                - 'Add count to specific menu pages': 'kwc-cms/customize-components/add-count.md'
+                - 'Dynamic Contents': 'kwc-cms/customize-components/dynamic-contents.md'
+                - 'Plugins': 'kwc-cms/customize-components/plugins.md'
+                - 'Component Flags': 'kwc-cms/customize-components/component-flags.md'
+                - 'Generator Flags': 'kwc-cms/customize-components/generator-flags.md'
+                - 'BEM': 'kwc-cms/customize-components/bem.md'
+                - 'Rules': 'kwc-cms/customize-components/rules.md'
 
 
 
