--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -251,3 +251,9 @@ pages:
 
 - Changelog: 'changelog/changelog.md'
 
+- Development:
+    - Overview: 'development/development.md'
+    - Coding Standards: 'development/coding-standards.md'
+    - Unit Tests: 'development/unit-tests.md'
+    - Windows Development: 'development/windows-development.md'
+
